<resources>
    <string name="app_name">Bank</string>
    <string name="add_bank">Add Bank</string>
    <string name="hint_bankName">Name of the Bank</string>
    <string name="hint_bankAddress">Address of the Bank</string>
    <string name="hint_bankCountry">Country of the Bank</string>
    <string name="hint_bankBIC">BIC of the Bank</string>
    <string name="button_save">Save</string>
    <string name="button_create_account">Create account</string>
    <string name="button_add_account">Add account</string>
    <string name="button_logout">Log out</string>
    <string name="button_login">Log In</string>
    <string name="empty_not_saved">Not saved because it (or some of it) is empty.</string>
    <string name="hint_cName">Name</string>
    <string name="hint_cAddress">Enter your address</string>
    <string name="hint_cCountry">Enter your Country</string>
    <string name="hint_cPhone">Enter your phone number</string>
    <string name="hint_cEmail">Enter your email</string>
    <string name="hint_cPass">Password</string>
    <string name="hint_cPass2">Enter the same password</string>

    <string name="hint_pin">Enter Pin for the card (4 digits)</string>
    <string name="hint_limit">Enter credit limit (max 10 000)</string>
    <string name="hint_withdraw">Enter withdraw limit (default 10 000)</string>
    <string name="limit">Limit card usage to one country</string>
    <string name="hint_recipient">Name of the recipient (optional)</string>
    <string name="hint_account_number">Account number for the recipient</string>
    <string name="hint_amount">Amount to transfer</string>

    <string name="accounts">Your accounts, click to see details: </string>
    <string name="profile">Edit your information</string>
    <string name="add_profile">Add your information</string>
    <string name="add_password">Add your password</string>

    <string name="select_bank">Select your bank: </string>


    <string name="hello_blank_fragment">Welcome to my humble bank application</string>
    <string name="invalid_credentials">Wrong name or password</string>
    <string name="welcome">Welcome to my humble bank application </string>
    <string name="button_profile">Open the selected bank</string>
    <string name="button_register">Register</string>
    <string name="button_next">Set password</string>

    <string name="add_account"><b>Add new account</b></string>
    <string name="modify_account"><b>Modify your account</b></string>
    <string name="add_card"><b>Add card</b></string>
    <string name="transfers">Allow transfers on this account</string>
    <string name="card_payments">Allow card payments on this account</string>
    <string name="account_type">Select account type: </string>
    <string name="withdraw_money">Withdraw</string>
    <string name="deposit_money">Deposit</string>
    <string name="transfer_money">Transfer</string>
    <string name="deposit_fragment">Deposit money to your account</string>
    <string name="withdraw_fragment">Withdraw money from your account</string>
    <string name="transfer_fragment">Transfer money to another account</string>
    <string name="card_fragment">Edit card settings</string>
    <string name="save_card">Save changes</string>
    <string name="changes">You can modify your card below: </string>
    <string name="select_card">Select card to be used: </string>
    <string name="no_card">If you have no cards, then withdraw is the same if you would walk to the bank
    to collect the money</string>
    <string name="card_details">Your card details</string>

    <string name="transfer_balance">Your accounts balance: </string>

    <string name="add_card_fragment">Add card to your account</string>
    <string name="card_type">Select card type: </string>
    <string name="use_card">Card Details</string>
    <string name="your_cards">Your cards: </string>
    <string name="your_transactions">Your transactions: </string>
    <string name="country_limit">Select country: </string>
    <string name="credit_limit">Select credit limit (optional): </string>
    <string name="deposit_seekBar">Select amount to deposit: </string>
    <string name="withdraw_seekBar">Select amount to withdraw: </string>
    <string name="transfer_seekBar">Select amount to transfer: </string>
    <string name="location">Select the country you are located: </string>
    <string name="no_accounts">No Accounts available</string>
    <string name="no_transactions">No transactions available!</string>

    <string-array name="account_types">
        <item>Current account</item>
        <item>Credit account</item>
        <item>Savings account</item>
    </string-array>
    <string-array name="card_types">
        <item>Debit card</item>
        <item>Credit card</item>
    </string-array>

</resources>
