<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Frontend.CardFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/card_fragment" />
    <TextView
        android:id="@+id/card_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/card_type"/>
    <Spinner
        android:id="@+id/card_types_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"/>
    <EditText
        android:id="@+id/card_withdraw_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_withdraw"
        android:layout_marginTop="150dp"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/card_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_pin"
        android:inputType="numberPassword"
        android:layout_marginTop="200dp"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/card_credit_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_limit"
        android:inputType="number"
        android:layout_marginTop="250dp"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/limit" />

    <TextView
        android:id="@+id/country_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/country_limit"/>

    <Spinner
        android:id="@+id/card_another_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"/>

    <Button
        android:id="@+id/button_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="450dp"
        android:text="@string/save_card" />

</FrameLayout>