<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Frontend.AddCardFragment">

    <TextView
        android:id="@+id/add_card_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_card_fragment" />

    <TextView
        android:id="@+id/card_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/card_type"/>

    <Spinner
        android:id="@+id/card_types_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/card_withdraw_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_withdraw"
        android:inputType="number"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
    android:id="@+id/card_pin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/min_height"
    android:fontFamily="sans-serif-light"
    android:hint="@string/hint_pin"
    android:inputType="numberPassword"
    android:layout_margin="@dimen/big_padding"
    android:textSize="18sp" />
    <EditText
        android:id="@+id/card_credit_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_limit"
        android:inputType="number"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/limit" />

    <TextView
        android:id="@+id/country_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/country_limit"/>

    <Spinner
        android:id="@+id/card_country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/add_card" />

</LinearLayout>