<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_password" />

    <EditText
    android:id="@+id/edit_Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_cPass"
    android:inputType="textPassword"
    android:layout_marginTop="50dp"
    android:textSize="18sp" />
    <EditText
        android:id="@+id/edit_Password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cPass2"
        android:inputType="textPassword"
        android:layout_marginTop="100dp"
        android:textSize="18sp" />
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_register"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="150dp"/>
</FrameLayout>