<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Frontend.ModifyAccountFragment">

    <TextView
        android:id="@+id/edit_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_account"
        android:layout_margin="@dimen/very_big_padding"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/account_type"/>

    <Spinner
        android:id="@+id/account_types_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:layout_gravity="center"/>

    <CheckBox
        android:id="@+id/transfers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/transfers" />
    <CheckBox
        android:id="@+id/card_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/card_payments" />
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel" />
</LinearLayout>