<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools">



    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />
    <Button
        android:id="@+id/edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/big_padding"
        android:layout_marginTop="50dp"
        android:text="@string/profile"/>
    <Button
        android:id="@+id/account_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/big_padding"
        android:layout_marginTop="105dp"
        android:text="@string/button_add_account"/>
    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/big_padding"
        android:layout_marginTop="160dp"
        android:text="@string/button_logout"/>
    <TextView
        android:id="@+id/profile_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/accounts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_padding"
        android:layout_marginTop="275dp"
        tools:listitem="@layout/recyclerview_item" />


</FrameLayout>