<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/safe"/>

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cName"
        android:inputType="text"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/user_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/hint_cPass"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="150dp"/>
</FrameLayout>